Rebrand from WorkflowMD to FirstResponse - Win Every Lead. Respond First.

--- a/frontend/public/offline.html
+++ b/frontend/public/offline.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="theme-color" content="#1890ff">
-  <title>WorkflowMD - Offline</title>
+  <title>FirstResponse - Offline</title>
   <style>
     * {
       margin: 0;
@@ -58,7 +58,7 @@
   <div class="container">
     <div class="icon">📡</div>
     <h1>You're offline</h1>
-    <p>Check your connection and try again. WorkflowMD requires an internet connection to analyze workflows.</p>
+    <p>Check your connection and try again. FirstResponse requires an internet connection to work properly.</p>
     <button class="retry-btn" onclick="location.reload()">Try Again</button>
   </div>
 </body>
